[tool.robotpy-build.metadata]
name = "robotpy-rev"
description = "REVLib for RobotPy"
author = "RobotPy Development Team"
author_email = "robotpy@googlegroups.com"
url = "https://github.com/robotpy/robotpy-rev"
license = "BSD-3-Clause"
install_requires = [
    "robotpy-wpiutil<2025.0.0,>=2024.3.2",
    "robotpy-wpimath<2025.0.0,>=2024.3.2",
    "wpilib<2025.0.0,>=2024.3.2",
]

[build-system]
requires = [
    "robotpy-build<2025.0.0,~=2024.0.0",
    "robotpy-wpiutil<2025.0.0,~=2024.3.2",
    "robotpy-wpimath<2025.0.0,~=2024.3.2",
    "wpilib<2025.0.0,~=2024.3.2",
]

[tool.robotpy-build]
base_package = "rev"

[tool.robotpy-build.static_libs."revlib_driver".maven_lib_download]
artifact_id = "REVLib-driver"
group_id = "com.revrobotics.frc"
repo_url = "https://maven.revrobotics.com"
version = "2024.2.3"
libs = ["REVLibDriver"]

[tool.robotpy-build.static_libs."revlib".maven_lib_download]
artifact_id = "REVLib-cpp"
group_id = "com.revrobotics.frc"
repo_url = "https://maven.revrobotics.com"
version = "2024.2.3"
libs = ["REVLib"]

[tool.robotpy-build.wrappers."rev"]
name = "rev"
sources = [
    "rev/rev.cpp"
]

depends = [
    "wpilibc",
    "wpilib_core",
    "wpimath_cpp",
    "wpiHal",
    "wpiutil",
    "revlib_driver",
    "revlib",
]

generation_data = "gen"

[tool.robotpy-build.wrappers."rev".autogen_headers]
# rev
AbsoluteEncoder = "rev/AbsoluteEncoder.h"
AnalogInput = "rev/AnalogInput.h"
CANAnalog = "rev/CANAnalog.h"
# CANDeviceScanner = "rev/CANDeviceScanner.h"
# CANDigitalInput = "rev/CANDigitalInput.h"
CANEncoder = "rev/CANEncoder.h"
# CANPIDController = "rev/CANPIDController.h"
CANSensor = "rev/CANSensor.h"
CANSparkBase = "rev/CANSparkBase.h"
CANSparkFlex = "rev/CANSparkFlex.h"
CANSparkLowLevel = "rev/CANSparkLowLevel.h"
CANSparkMax = "rev/CANSparkMax.h"
# CANSparkMaxLowLevel = "rev/CANSparkMaxLowLevel.h"
CIEColor = "rev/CIEColor.h"
ColorMatch = "rev/ColorMatch.h"
ColorSensorV3 = "rev/ColorSensorV3.h"
# ControlType = "rev/ControlType.h"
MotorFeedbackSensor = "rev/MotorFeedbackSensor.h"
REVLibError = "rev/REVLibError.h"
RelativeEncoder = "rev/RelativeEncoder.h"
SparkAbsoluteEncoder = "rev/SparkAbsoluteEncoder.h"
SparkAnalogSensor = "rev/SparkAnalogSensor.h"
SparkFlexExternalEncoder = "rev/SparkFlexExternalEncoder.h"
SparkLimitSwitch = "rev/SparkLimitSwitch.h"
SparkMaxAbsoluteEncoder = "rev/SparkMaxAbsoluteEncoder.h"
SparkMaxAlternateEncoder = "rev/SparkMaxAlternateEncoder.h"
SparkMaxAnalogSensor = "rev/SparkMaxAnalogSensor.h"
SparkMaxLimitSwitch = "rev/SparkMaxLimitSwitch.h"
SparkMaxPIDController = "rev/SparkMaxPIDController.h"
SparkMaxRelativeEncoder = "rev/SparkMaxRelativeEncoder.h"
SparkPIDController = "rev/SparkPIDController.h"
SparkRelativeEncoder = "rev/SparkRelativeEncoder.h"
