[tool.robotpy-build.metadata]
name = "robotpy-rev"
description = "REVLib for RobotPy"
author = "RobotPy Development Team"
author_email = "robotpy@googlegroups.com"
url = "https://github.com/robotpy/robotpy-rev"
license = "BSD-3-Clause"
install_requires = [
    "wpilib<2026.0.0,>=2025.1.1",
]

[build-system]
requires = [
    "robotpy-build<2026.0.0,~=2025.0.0",
    "wpilib<2026.0.0,>=2025.1.1",
]

[tool.robotpy-build]
base_package = "rev"

[tool.robotpy-build.static_libs."revlib_driver".maven_lib_download]
artifact_id = "REVLib-driver"
group_id = "com.revrobotics.frc"
repo_url = "https://maven.revrobotics.com"
version = "2025.0.0"
libs = ["REVLibDriver"]

[tool.robotpy-build.static_libs."revlib".maven_lib_download]
artifact_id = "REVLib-cpp"
group_id = "com.revrobotics.frc"
repo_url = "https://maven.revrobotics.com"
version = "2025.0.0"
libs = ["REVLib"]

[tool.robotpy-build.wrappers."rev"]
name = "rev"
sources = [
    "rev/rev.cpp"
]

depends = [
    "wpilibc",
    "wpilib_core",
    "wpimath_cpp",
    "wpiHal",
    "wpiutil",
    "revlib_driver",
    "revlib",
]

generation_data = "gen"

[tool.robotpy-build.wrappers."rev".autogen_headers]
# rev
# CANSparkDriver = "rev/CANSparkDriver.h"
# CANSparkDriverPrivate = "rev/CANSparkDriverPrivate.h"
# CANSparkFrames = "rev/CANSparkFrames.h"
# CANSparkMaxFrames = "rev/CANSparkMaxFrames.h"
# CANSparkParameters = "rev/CANSparkParameters.h"
# CANSparkSWDL = "rev/CANSparkSWDL.h"
# REVCommon = "rev/REVCommon.h"
# REVLibDaemon = "rev/REVLibDaemon.h"
# REVLibErrors = "rev/REVLibErrors.h"
# REVUtils = "rev/REVUtils.h"
# SparkFrameManager = "rev/SparkFrameManager.h"

# rev/rev
# REVLibVersion = "rev/rev/REVLibVersion.h"

# rev/sim
# CANSpark = "rev/sim/CANSpark.h"
# MAXMotion = "rev/sim/MAXMotion.h"
# SmartCurrentLimit = "rev/sim/SmartCurrentLimit.h"

# rev
AbsoluteEncoder = "rev/AbsoluteEncoder.h"
AnalogInput = "rev/AnalogInput.h"
# TODO: uncomment when GetFRCDeviceTypeText and GetFRCManufacturerText are
#       marked as `static inline`
# CANDeviceScanner = "rev/CANDeviceScanner.h"
CIEColor = "rev/CIEColor.h"
ColorMatch = "rev/ColorMatch.h"
ColorSensorV3 = "rev/ColorSensorV3.h"
REVLibError = "rev/REVLibError.h"
RelativeEncoder = "rev/RelativeEncoder.h"
SparkAbsoluteEncoder = "rev/SparkAbsoluteEncoder.h"
SparkAnalogSensor = "rev/SparkAnalogSensor.h"
SparkBase = "rev/SparkBase.h"
SparkClosedLoopController = "rev/SparkClosedLoopController.h"
SparkFlex = "rev/SparkFlex.h"
SparkFlexExternalEncoder = "rev/SparkFlexExternalEncoder.h"
SparkLimitSwitch = "rev/SparkLimitSwitch.h"
SparkLowLevel = "rev/SparkLowLevel.h"
SparkMax = "rev/SparkMax.h"
SparkMaxAlternateEncoder = "rev/SparkMaxAlternateEncoder.h"
SparkRelativeEncoder = "rev/SparkRelativeEncoder.h"
SparkSim = "rev/SparkSim.h"

# rev/config
AbsoluteEncoderConfig = "rev/config/AbsoluteEncoderConfig.h"
AbsoluteEncoderConfigAccessor = "rev/config/AbsoluteEncoderConfigAccessor.h"
AlternateEncoderConfig = "rev/config/AlternateEncoderConfig.h"
AlternateEncoderConfigAccessor = "rev/config/AlternateEncoderConfigAccessor.h"
AnalogSensorConfig = "rev/config/AnalogSensorConfig.h"
AnalogSensorConfigAccessor = "rev/config/AnalogSensorConfigAccessor.h"
BaseConfig = "rev/config/BaseConfig.h"
ClosedLoopConfig = "rev/config/ClosedLoopConfig.h"
ClosedLoopConfigAccessor = "rev/config/ClosedLoopConfigAccessor.h"
ClosedLoopSlot = "rev/ClosedLoopSlot.h"
EncoderConfig = "rev/config/EncoderConfig.h"
EncoderConfigAccessor = "rev/config/EncoderConfigAccessor.h"
ExternalEncoderConfig = "rev/config/ExternalEncoderConfig.h"
ExternalEncoderConfigAccessor = "rev/config/ExternalEncoderConfigAccessor.h"
LimitSwitchConfig = "rev/config/LimitSwitchConfig.h"
LimitSwitchConfigAccessor = "rev/config/LimitSwitchConfigAccessor.h"
MAXMotionConfig = "rev/config/MAXMotionConfig.h"
MAXMotionConfigAccessor = "rev/config/MAXMotionConfigAccessor.h"
SignalsConfig = "rev/config/SignalsConfig.h"
SignalsConfigAccessor = "rev/config/SignalsConfigAccessor.h"
SmartMotionConfig = "rev/config/SmartMotionConfig.h"
SmartMotionConfigAccessor = "rev/config/SmartMotionConfigAccessor.h"
SoftLimitConfig = "rev/config/SoftLimitConfig.h"
SoftLimitConfigAccessor = "rev/config/SoftLimitConfigAccessor.h"
SparkBaseConfig = "rev/config/SparkBaseConfig.h"
SparkBaseConfigAccessor = "rev/config/SparkBaseConfigAccessor.h"
SparkFlexConfig = "rev/config/SparkFlexConfig.h"
SparkFlexConfigAccessor = "rev/config/SparkFlexConfigAccessor.h"
SparkMaxConfig = "rev/config/SparkMaxConfig.h"
SparkMaxConfigAccessor = "rev/config/SparkMaxConfigAccessor.h"
SparkParameters = "rev/config/SparkParameters.h"

# rev/sim
MovingAverageFilterSim = "rev/sim/MovingAverageFilterSim.h"
NoiseGenerator = "rev/sim/NoiseGenerator.h"
SparkAbsoluteEncoderSim = "rev/sim/SparkAbsoluteEncoderSim.h"
SparkAnalogSensorSim = "rev/sim/SparkAnalogSensorSim.h"
SparkExternalEncoderSim = "rev/sim/SparkExternalEncoderSim.h"
SparkFlexSim = "rev/sim/SparkFlexSim.h"
SparkLimitSwitchSim = "rev/sim/SparkLimitSwitchSim.h"
SparkMaxAlternateEncoderSim = "rev/sim/SparkMaxAlternateEncoderSim.h"
SparkMaxSim = "rev/sim/SparkMaxSim.h"
SparkRelativeEncoderSim = "rev/sim/SparkRelativeEncoderSim.h"
SparkSimFaultManager = "rev/sim/SparkSimFaultManager.h"
